add comment about dyndoc

--- a/documents/debt_growth markdown for html.Rmd
+++ b/documents/debt_growth markdown for html.Rmd
@@ -20,7 +20,7 @@ bibliography: growth and debt.bib
 
 The purpose of this note is to illustrate the use statistical code to do empirical analysis from beginning to end: from database retrieval, through cleaning and manipulating data, to analysis and display of empirical results. This note can be used as an introductory exercise of reproducible research. 
 
-While reproducible analysis can be done by keeping code and write-up of the analysis separate, new tools now exist that combine the two. One such tool is [RMarkdown](http://rmarkdown.rstudio.com/) which I use to create this note. There is a companion document that performs the same analysis and creates a similar document using [dynamic documents](http://www.stata.com/new-in-stata/markdown/) (`dyndoc`) available in the latest version of Stata (Stata 15).
+While reproducible analysis can be done by keeping code and write-up of the analysis separate, new tools now exist that combine the two. One such tool is [RMarkdown](http://rmarkdown.rstudio.com/) which I use to create this note. There is a companion document that performs the same analysis and creates a similar document using [dynamic documents](http://www.stata.com/new-in-stata/markdown/) (`dyndoc`) available in the latest version of Stata (Stata 15). I really don't like dyndoc.
 
 The empirical content of this note is motivated by the work of [Herndon et al (2014)](https://doi.org/10.1093/cje/bet075) who [famously](http://www.cc.com/video-clips/dcyvro/the-colbert-report-austerity-s-spreadsheet-error) discovered a "spreadsheet error" in the work by [Reinhart and Rogoff (2010)](https://www.aeaweb.org/articles?id=10.1257/aer.100.2.573). Herndon et al (2014) overturn Reinhart and Rogoff results that economic growth declines as public debt reaches levels above 90% of GDP. The sources of the different result include a miss-typed formula in an Excel spreadsheet and arbitrary exclusions of certain observations. 
 
